# experiments

./: pyproject.toml  requirements.txt
notebooks/: assistants-intro.ipynb  insanely-fast-whisper.ipynb  template.ipynb
notebooks/.ipynb_checkpoints/: assistants-intro-checkpoint.ipynb
notebooks/fastai.course/: 00-is-it-afrobeats.ipynb
notebooks/fastai.course/part1/: 00-is-it-a-waifu.ipynb
