[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Interesting AIML experiments"
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.1"
rich = "^13.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
